# HiClaw

./: .cleanuprc  .gitignore  CLAUDE.md  CLEANUP_REPORT.md  Detect_choose_serial.py  LICENSE  QWEN3_FIX_README.md  QWEN3_TEST_GUIDE.md  README.md  adjust_threshold.sh  camera_feeder.py  cleanup.sh  cv.md  debug_qwen3_tokens.py  download_qwen3.py  environment_check.sh  fetch_board_logs.sh  fetch_venc_watchdog_logs.sh  llm.md  main.cpp.remote  patch_isin_remote.py  patch_qwen35_linear_attn_mul.py  plan.md  probe_layer0_submodule.py  quick_test_qwen3.py  qwen35_nightly_atc.py  qwen_0_5b_chat_webui.py  repro_npu_triangular_update.py  requirements.txt  run_acl_inference.py  run_qwen3_webui.py  run_qwen_webui_fixed.py  serial_hello  serial_hello.c  smoke_qwen35_vl.py  start_demo.sh  start_laser_webui.sh  start_qwen35_nightly_atc.sh  start_qwen3_webui_remote.sh  start_route_b.sh  (+17 more)
CV/: README.md  yolov8_cam.py  yolov8_eval.py
YoloV3Infer/: main.cpp
calibration_data/: laser_calibration_board_A4_coordinates.txt
config/: electro61_v11.yaml  yolo26_6cls.yaml
datasets/: README.md
docs/: ascend_310b_cpu_aicpu_guide.md  galvo_code_map.md  qwen35_ascend310b_deployment_report.md  qwen35_nightly_atc.md  qwen3_0.6b_310b1_benchmark.md  qwen3_ppt_figures.html  route-a-design.md
edge/: CALIBRATION_GUIDE.md  GALVO_INTEGRATION_GUIDE.md  LASER_INTEGRATION.md  README_GALVO.md
mirror/: DAC8563.7z  stm32_firmware_patch.c  stm32f401ccu6_dac8563.7z  (+1 more)
remote_sync/pybind_venc/: CMakeLists.txt  hw_encode_test.py  py_rtsp_encode.py
remote_sync/pybind_venc/src/: venc_wrap.cpp
(+201 files in other folders)
